[package]
name = "simple-library-explorer"
version = "0.1.0"
authors = ["nonamehomework <lnsf03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = ["blocking","json"] }
log = "0.4.11"
env_logger = "0.7.1"
toml = "0.5.6"
xdg = "2.2.0"
serde_derive = "1.0.116"
serde = "1.0.116"
serde_json = "1.0.58"
either = "1.6.1"

[dev-dependencies]
httpmock = "0.4.5"
